--- a/index.html
+++ b/index.html
@@ -1,149 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Nyla 💜</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
 <style>
+:root {
+  --bg: #0f0f1a;
+  --panel: #16161f;
+  --header: #1a1a26;
+  --border: #2a2a3a;
+  --nyla: #1e1e2e;
+  --user1: #e879f9;
+  --user2: #a78bfa;
+  --text: #e4e4e7;
+  --muted: #9ca3af;
+}
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  background: #0f0f1a;
-  color: #e4e4e7;
-  overflow: hidden;
+  background: var(--bg);
+  color: var(--text);
+  height: 100vh;
 }
 
-/* ===== APP WRAPPER ===== */
+/* === APP LAYOUT === */
 .app {
-  position: fixed;
-  inset: 0;
   max-width: 720px;
+  height: 100vh;
   margin: 0 auto;
-  background: #16161f;
+  background: var(--panel);
   display: flex;
   flex-direction: column;
+  border-left: 1px solid var(--border);
+  border-right: 1px solid var(--border);
 }
 
-/* ===== HEADER ===== */
+/* === HEADER === */
 .header {
-  padding: 16px;
-  background: #1a1a26;
-  border-bottom: 1px solid #2a2a3a;
+  padding: 1rem;
+  background: var(--header);
+  border-bottom: 1px solid var(--border);
   display: flex;
-  gap: 12px;
   align-items: center;
+  gap: 0.75rem;
 }
 
 .avatar {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
-  display: grid;
-  place-items: center;
-  font-weight: bold;
+  background: linear-gradient(135deg, var(--user1), var(--user2));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  color: #fff;
+}
+
+.title {
+  font-size: 1.1rem;
+  font-weight: 600;
 }
 
 .status {
-  font-size: 12px;
-  color: #a78bfa;
+  font-size: 0.75rem;
+  color: var(--user2);
 }
 
-/* ===== MESSAGES ===== */
+/* === MESSAGES === */
 .messages {
-  flex: 1 1 auto;
-  min-height: 0;
+  flex: 1;
   overflow-y: auto;
-  padding: 16px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0.75rem;
 }
 
-.msg {
-  max-width: 75%;
-  padding: 12px 14px;
-  border-radius: 16px;
-  font-size: 15px;
-  animation: pop 0.25s ease;
+.msg-wrap {
+  display: flex;
+  animation: fadeUp 0.25s ease;
 }
 
-@keyframes pop {
-  from { opacity: 0; transform: translateY(8px); }
+.msg-wrap.user {
+  justify-content: flex-end;
+}
+
+.msg-wrap.nyla {
+  justify-content: flex-start;
+}
+
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(6px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
-.user {
-  align-self: flex-end;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
+.bubble {
+  max-width: 75%;
+  padding: 0.75rem 1rem;
+  border-radius: 16px;
+  line-height: 1.45;
+  font-size: 0.95rem;
+  word-wrap: break-word;
+}
+
+.user .bubble {
+  background: linear-gradient(135deg, var(--user1), var(--user2));
   color: #fff;
   border-bottom-right-radius: 4px;
 }
 
-.nyla {
-  align-self: flex-start;
-  background: #1e1e2e;
+.nyla .bubble {
+  background: var(--nyla);
+  color: var(--text);
   border-bottom-left-radius: 4px;
 }
 
+/* === EMOTION === */
 .emotion {
-  font-size: 11px;
-  opacity: 0.6;
+  font-size: 0.7rem;
   margin-top: 4px;
-  color: #a78bfa;
+  padding-left: 6px;
+  opacity: 0.7;
+  color: var(--user2);
+  font-style: italic;
 }
 
-/* ===== TYPING ===== */
+/* === TYPING === */
 .typing {
   display: flex;
   gap: 6px;
+  padding: 0.5rem 0.75rem;
 }
 
 .dot {
-  width: 6px;
-  height: 6px;
-  background: #a78bfa;
+  width: 8px;
+  height: 8px;
+  background: var(--user2);
   border-radius: 50%;
-  animation: bounce 1.2s infinite;
+  animation: bounce 1.4s infinite;
 }
 
-.dot:nth-child(2){animation-delay:.15s}
-.dot:nth-child(3){animation-delay:.3s}
+.dot:nth-child(2){ animation-delay: .2s }
+.dot:nth-child(3){ animation-delay: .4s }
 
 @keyframes bounce {
-  0%,80%,100%{opacity:.4}
-  40%{opacity:1}
+  0%, 80%, 100% { transform: translateY(0); opacity: .6 }
+  40% { transform: translateY(-6px); opacity: 1 }
 }
 
-/* ===== INPUT ===== */
+/* === INPUT === */
 .input {
-  padding: 14px;
-  background: #1a1a26;
-  border-top: 1px solid #2a2a3a;
+  padding: 1rem;
+  background: var(--header);
+  border-top: 1px solid var(--border);
   display: flex;
-  gap: 10px;
+  gap: 0.5rem;
 }
 
 .input input {
   flex: 1;
+2;
   background: transparent;
   border: none;
   outline: none;
-  color: #e4e4e7;
-  font-size: 15px;
+  color: var(--text);
+  font-size: 1rem;
 }
 
 .input button {
@@ -151,9 +181,14 @@ body {
   height: 40px;
   border-radius: 50%;
   border: none;
-  background: linear-gradient(135deg, #e879f9, #a78bfa);
-  color: white;
-  font-size: 18px;
+  cursor: pointer;
+  background: linear-gradient(135deg, var(--user1), var(--user2));
+  color: #fff;
+  font-size: 1.1rem;
+}
+
+.input button:disabled {
+  opacity: 0.6;
 }
 </style>
 </head>
@@ -164,7 +199,7 @@ body {
   <div class="header">
     <div class="avatar">N</div>
     <div>
-      <h2>Nyla</h2>
+      <div class="title">Nyla</div>
       <div class="status">online</div>
     </div>
   </div>
@@ -172,88 +207,93 @@ body {
   <div class="messages" id="messages"></div>
 
   <div class="input">
-    <input id="input" placeholder="Message Nyla..." autocomplete="off">
+    <input id="input" placeholder="Message Nyla..." />
     <button id="send">➤</button>
   </div>
 </div>
 
 <script>
-const supabase = window.supabase.createClient(
-  "https://sjwwkmjfehsondqbmouu.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNqd3drbWpmZWhzb25kcWJtb3V1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU2MzE5MzksImV4cCI6MjA4MTIwNzkzOX0.cgooAxM2BXisi20RH-cKqardpt432dPAs1EI_mVqV0U"
-);
-
-const API = "https://nyla-api.onrender.com/nyla";
+const API_URL = "https://nyla-api.onrender.com/nyla";
 
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
-const send = document.getElementById("send");
+const sendBtn = document.getElementById("send");
 
-send.onclick = sendMessage;
-input.onkeydown = e => e.key === "Enter" && sendMessage();
+let busy = false;
+let typingEl = null;
 
-function addMessage(text, role, emotion) {
-  const m = document.createElement("div");
-  m.className = "msg " + role;
-  m.textContent = text;
+sendBtn.onclick = send;
+input.onkeydown = e => e.key === "Enter" && send();
 
-  if (emotion) {
-    const e = document.createElement("div");
-    e.className = "emotion";
-    e.textContent = emotion;
-    m.appendChild(e);
+function addMessage(text, who, emotion) {
+  const wrap = document.createElement("div");
+  wrap.className = "msg-wrap " + who;
+
+  const bubble = document.createElement("div");
+  bubble.className = "bubble";
+  bubble.textContent = text;
+  wrap.appendChild(bubble);
+
+  if (emotion && who === "nyla") {
+    const emo = document.createElement("div");
+    emo.className = "emotion";
+    emo.textContent = emotion;
+    wrap.appendChild(emo);
   }
 
-  messages.appendChild(m);
+  messages.appendChild(wrap);
   messages.scrollTop = messages.scrollHeight;
 }
 
-async function loadHistory() {
-  const { data } = await supabase
-    .from("messages")
-    .select("*")
-    .order("created_at");
-
-  data?.forEach(m => addMessage(m.content, m.role, m.emotion));
+function showTyping() {
+  typingEl = document.createElement("div");
+  typingEl.className = "msg-wrap nyla";
+  typingEl.innerHTML = `
+    <div class="bubble">
+      <div class="typing">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    </div>`;
+  messages.appendChild(typingEl);
+  messages.scrollTop = messages.scrollHeight;
 }
 
-async function sendMessage() {
-  if (!input.value.trim()) return;
-  const text = input.value;
+function removeTyping() {
+  if (typingEl) typingEl.remove();
+  typingEl = null;
+}
+
+async function send() {
+  const text = input.value.trim();
+  if (!text || busy) return;
+
   input.value = "";
-
   addMessage(text, "user");
-  await supabase.from("messages").insert({ role: "user", content: text });
 
-  const typing = document.createElement("div");
-  typing.className = "msg nyla";
-  typing.innerHTML = `<div class="typing"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>`;
-  messages.appendChild(typing);
-  messages.scrollTop = messages.scrollHeight;
+  busy = true;
+  sendBtn.disabled = true;
+  showTyping();
 
   try {
-    const r = await fetch(API, {
+    const res = await fetch(API_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
     });
-    const d = await r.json();
 
-    typing.remove();
-    addMessage(d.reply, "nyla", d.emotion);
-
-    await supabase.from("messages").insert({
-      role: "nyla",
-      content: d.reply,
-      emotion: d.emotion
-    });
+    const data = await res.json();
+    removeTyping();
+    addMessage(data.reply, "nyla", data.emotion);
   } catch {
-    typing.remove();
-    addMessage("I glitched 😭", "nyla", "shocked");
+    removeTyping();
+    addMessage("Something went wrong 😭", "nyla", "shocked");
   }
-}
 
-loadHistory();
+  busy = false;
+  sendBtn.disabled = false;
+}
 </script>
 
 </body>
