--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>Nyla 💜</title>
 
 <style>
@@ -10,262 +10,280 @@
   --bg: #0f0f1a;
   --panel: #16161f;
   --header: #1a1a26;
-  --border: #2a2a3a;
-  --nyla: #1e1e2e;
-  --user1: #e879f9;
-  --user2: #a78bfa;
-  --text: #e4e4e7;
-  --muted: #9ca3af;
+  --bubble: #1e1e2e;
+  --accent: #a78bfa;
+  --accent-grad: linear-gradient(135deg, #e879f9, #a78bfa);
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; }
+html, body { height: 100%; }
 
 body {
   background: var(--bg);
-  color: var(--text);
-  height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  color: #e4e4e7;
+  min-height: 100dvh;
 }
 
-/* === APP LAYOUT === */
 .app {
+  min-height: 100dvh;
   max-width: 720px;
-  height: 100vh;
   margin: 0 auto;
-  background: var(--panel);
   display: flex;
   flex-direction: column;
-  border-left: 1px solid var(--border);
-  border-right: 1px solid var(--border);
+  background: var(--panel);
+  transition: box-shadow 0.4s ease;
 }
 
-/* === HEADER === */
+/* HEADER */
 .header {
-  padding: 1rem;
+  padding: 16px;
   background: var(--header);
-  border-bottom: 1px solid var(--border);
+  border-bottom: 1px solid #2a2a3a;
   display: flex;
   align-items: center;
-  gap: 0.75rem;
+  gap: 12px;
 }
 
 .avatar {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background: linear-gradient(135deg, var(--user1), var(--user2));
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: var(--accent-grad);
+  display: grid;
+  place-items: center;
   font-weight: 700;
-  color: #fff;
+  color: white;
 }
 
-.title {
-  font-size: 1.1rem;
-  font-weight: 600;
-}
+.header h1 { font-size: 18px; }
+.status { font-size: 12px; color: var(--accent); }
 
-.status {
-  font-size: 0.75rem;
-  color: var(--user2);
-}
-
-/* === MESSAGES === */
+/* MESSAGES */
 .messages {
-  flex: 1;
+  flex: 1 1 auto;
+  min-height: 0;
+  padding: 16px;
   overflow-y: auto;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 12px;
 }
 
-.msg-wrap {
-  display: flex;
-  animation: fadeUp 0.25s ease;
-}
-
-.msg-wrap.user {
-  justify-content: flex-end;
-}
-
-.msg-wrap.nyla {
-  justify-content: flex-start;
-}
-
-@keyframes fadeUp {
-  from { opacity: 0; transform: translateY(6px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-.bubble {
+/* MESSAGE */
+.msg {
   max-width: 75%;
-  padding: 0.75rem 1rem;
+  padding: 12px 14px;
   border-radius: 16px;
-  line-height: 1.45;
-  font-size: 0.95rem;
-  word-wrap: break-word;
+  font-size: 15px;
+  line-height: 1.5;
+  animation: slideIn 0.25s ease;
 }
 
-.user .bubble {
-  background: linear-gradient(135deg, var(--user1), var(--user2));
-  color: #fff;
+@keyframes slideIn {
+  from { opacity: 0; transform: translateY(8px) scale(0.98); }
+  to   { opacity: 1; transform: translateY(0) scale(1); }
+}
+
+.msg.user {
+  align-self: flex-end;
+  background: var(--accent-grad);
+  color: white;
   border-bottom-right-radius: 4px;
 }
 
-.nyla .bubble {
-  background: var(--nyla);
-  color: var(--text);
+.msg.nyla {
+  align-self: flex-start;
+  background: var(--bubble);
   border-bottom-left-radius: 4px;
 }
 
-/* === EMOTION === */
 .emotion {
-  font-size: 0.7rem;
+  font-size: 11px;
   margin-top: 4px;
-  padding-left: 6px;
-  opacity: 0.7;
-  color: var(--user2);
-  font-style: italic;
+  opacity: 0.6;
+  color: var(--accent);
 }
 
-/* === TYPING === */
+/* TYPING */
 .typing {
   display: flex;
   gap: 6px;
-  padding: 0.5rem 0.75rem;
+  padding: 10px 14px;
+  background: var(--bubble);
+  border-radius: 16px;
+  width: fit-content;
 }
 
 .dot {
-  width: 8px;
-  height: 8px;
-  background: var(--user2);
+  width: 6px;
+  height: 6px;
+  background: var(--accent);
   border-radius: 50%;
-  animation: bounce 1.4s infinite;
+  animation: bounce 1.2s infinite ease-in-out;
 }
 
-.dot:nth-child(2){ animation-delay: .2s }
-.dot:nth-child(3){ animation-delay: .4s }
+.dot:nth-child(2) { animation-delay: .15s; }
+.dot:nth-child(3) { animation-delay: .3s; }
 
 @keyframes bounce {
-  0%, 80%, 100% { transform: translateY(0); opacity: .6 }
-  40% { transform: translateY(-6px); opacity: 1 }
+  0%, 80%, 100% { transform: scale(0.8); opacity: .5; }
+  40% { transform: scale(1.2); opacity: 1; }
 }
 
-/* === INPUT === */
-.input {
-  padding: 1rem;
+/* INPUT */
+.input-area {
+  padding: 14px;
   background: var(--header);
-  border-top: 1px solid var(--border);
+  border-top: 1px solid #2a2a3a;
   display: flex;
-  gap: 0.5rem;
+  gap: 10px;
 }
 
-.input input {
+.input-area input {
   flex: 1;
-2;
   background: transparent;
   border: none;
   outline: none;
-  color: var(--text);
-  font-size: 1rem;
+  color: #e4e4e7;
+  font-size: 15px;
 }
 
-.input button {
+.input-area button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  background: linear-gradient(135deg, var(--user1), var(--user2));
-  color: #fff;
-  font-size: 1.1rem;
+  background: var(--accent-grad);
+  color: white;
+  font-size: 18px;
 }
 
-.input button:disabled {
-  opacity: 0.6;
-}
+.input-area button:disabled { opacity: 0.5; }
+
+/* EMOTION UI */
+.app.happy   { box-shadow: 0 0 25px rgba(232,121,249,.35); }
+.app.blush   { box-shadow: 0 0 30px rgba(167,139,250,.45); }
+.app.angry   { box-shadow: 0 0 30px rgba(239,68,68,.45); }
+.app.excited { box-shadow: 0 0 35px rgba(56,189,248,.45); }
+.app.sleepy  { box-shadow: 0 0 20px rgba(148,163,184,.35); }
 </style>
 </head>
 
 <body>
 
-<div class="app">
+<div class="app" id="app">
   <div class="header">
     <div class="avatar">N</div>
     <div>
-      <div class="title">Nyla</div>
+      <h1>Nyla</h1>
       <div class="status">online</div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
-  <div class="input">
-    <input id="input" placeholder="Message Nyla..." />
+  <div class="input-area">
+    <input id="input" placeholder="Message Nyla..." autocomplete="off">
     <button id="send">➤</button>
   </div>
 </div>
 
 <script>
-const API_URL = "https://nyla-api.onrender.com/nyla";
+/* ================= CONFIG ================= */
+const API = "https://nyla-api.onrender.com/nyla";
+const STORAGE_KEY = "nyla_chat_history";
 
+/* ================= ELEMENTS ================= */
+const app = document.getElementById("app");
 const messages = document.getElementById("messages");
 const input = document.getElementById("input");
-const sendBtn = document.getElementById("send");
+const send = document.getElementById("send");
 
 let busy = false;
-let typingEl = null;
+let typingBubble = null;
+let chatHistory = [];
 
-sendBtn.onclick = send;
-input.onkeydown = e => e.key === "Enter" && send();
+/* ================= LOAD HISTORY ================= */
+loadHistory();
 
-function addMessage(text, who, emotion) {
-  const wrap = document.createElement("div");
-  wrap.className = "msg-wrap " + who;
+/* ================= EVENTS ================= */
+send.onclick = sendMessage;
+input.onkeydown = e => e.key === "Enter" && sendMessage();
 
-  const bubble = document.createElement("div");
-  bubble.className = "bubble";
-  bubble.textContent = text;
-  wrap.appendChild(bubble);
+/* ================= FUNCTIONS ================= */
+function addMessage(text, sender, emotion = "") {
+  const msg = document.createElement("div");
+  msg.className = "msg " + sender;
+  msg.textContent = text;
 
-  if (emotion && who === "nyla") {
+  if (emotion && sender === "nyla") {
     const emo = document.createElement("div");
     emo.className = "emotion";
     emo.textContent = emotion;
-    wrap.appendChild(emo);
+    msg.appendChild(emo);
+    triggerEmotionUI(emotion);
   }
 
-  messages.appendChild(wrap);
+  messages.appendChild(msg);
   messages.scrollTop = messages.scrollHeight;
+
+  chatHistory.push({ text, sender, emotion });
+  saveHistory();
 }
 
 function showTyping() {
-  typingEl = document.createElement("div");
-  typingEl.className = "msg-wrap nyla";
-  typingEl.innerHTML = `
-    <div class="bubble">
-      <div class="typing">
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-      </div>
-    </div>`;
-  messages.appendChild(typingEl);
+  typingBubble = document.createElement("div");
+  typingBubble.className = "typing";
+  typingBubble.innerHTML = `<div class="dot"></div><div class="dot"></div><div class="dot"></div>`;
+  messages.appendChild(typingBubble);
   messages.scrollTop = messages.scrollHeight;
 }
 
 function removeTyping() {
-  if (typingEl) typingEl.remove();
-  typingEl = null;
+  if (typingBubble) typingBubble.remove();
+  typingBubble = null;
 }
 
-async function send() {
+function triggerEmotionUI(emotion) {
+  app.className = "app " + emotion;
+  setTimeout(() => app.className = "app", 1200);
+}
+
+/* ================= STORAGE ================= */
+function saveHistory() {
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(chatHistory));
+}
+
+function loadHistory() {
+  const saved = localStorage.getItem(STORAGE_KEY);
+  if (!saved) {
+    addMessage("Heyyy 💜 I’m Nyla. Talk to me~", "nyla", "excited");
+    return;
+  }
+
+  chatHistory = JSON.parse(saved);
+  chatHistory.forEach(m => {
+    const msg = document.createElement("div");
+    msg.className = "msg " + m.sender;
+    msg.textContent = m.text;
+
+    if (m.emotion && m.sender === "nyla") {
+      const emo = document.createElement("div");
+      emo.className = "emotion";
+      emo.textContent = m.emotion;
+      msg.appendChild(emo);
+    }
+
+    messages.appendChild(msg);
+  });
+
+  messages.scrollTop = messages.scrollHeight;
+}
+
+/* ================= SEND ================= */
+async function sendMessage() {
   const text = input.value.trim();
   if (!text || busy) return;
 
@@ -273,11 +291,11 @@ async function send() {
   addMessage(text, "user");
 
   busy = true;
-  sendBtn.disabled = true;
+  send.disabled = true;
   showTyping();
 
   try {
-    const res = await fetch(API_URL, {
+    const res = await fetch(API, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message: text })
@@ -286,13 +304,14 @@ async function send() {
     const data = await res.json();
     removeTyping();
     addMessage(data.reply, "nyla", data.emotion);
+
   } catch {
     removeTyping();
-    addMessage("Something went wrong 😭", "nyla", "shocked");
+    addMessage("I lagged 😭 try again", "nyla", "shocked");
   }
 
   busy = false;
-  sendBtn.disabled = false;
+  send.disabled = false;
 }
 </script>
 
