--- a/index.html
+++ b/index.html
@@ -1,320 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nyla 💜</title>
 
 <style>
 :root {
-  --bg: #0f0f1a;
-  --panel: #16161f;
-  --header: #1a1a26;
-  --bubble: #1e1e2e;
-  --accent: #a78bfa;
-  --accent-grad: linear-gradient(135deg, #e879f9, #a78bfa);
+  --bg:#0f0f1a;
+  --panel:#16161f;
+  --header:#1a1a26;
+  --border:#2a2a3a;
+  --nyla:#1e1e2e;
+  --u1:#e879f9;
+  --u2:#a78bfa;
+  --text:#e4e4e7;
 }
 
-* { margin: 0; padding: 0; box-sizing: border-box; }
-html, body { height: 100%; }
+* { box-sizing:border-box; margin:0; padding:0; }
 
 body {
-  background: var(--bg);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  color: #e4e4e7;
-  min-height: 100dvh;
+  background:var(--bg);
+  color:var(--text);
+  min-height:100svh;
+  font-family:system-ui, sans-serif;
 }
 
+/* APP */
 .app {
-  min-height: 100dvh;
-  max-width: 720px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  background: var(--panel);
-  transition: box-shadow 0.4s ease;
+  max-width:720px;
+  margin:0 auto;
+  min-height:100svh;
+  display:flex;
+  flex-direction:column;
+  background:var(--panel);
+  border-left:1px solid var(--border);
+  border-right:1px solid var(--border);
 }
 
 /* HEADER */
 .header {
-  padding: 16px;
-  background: var(--header);
-  border-bottom: 1px solid #2a2a3a;
-  display: flex;
-  align-items: center;
-  gap: 12px;
+  padding:1rem;
+  background:var(--header);
+  border-bottom:1px solid var(--border);
+  display:flex;
+  gap:.75rem;
+  align-items:center;
 }
 
 .avatar {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background: var(--accent-grad);
-  display: grid;
-  place-items: center;
-  font-weight: 700;
-  color: white;
+  width:42px;height:42px;border-radius:50%;
+  background:linear-gradient(135deg,var(--u1),var(--u2));
+  display:flex;align-items:center;justify-content:center;
+  font-weight:700;color:#fff;
 }
 
-.header h1 { font-size: 18px; }
-.status { font-size: 12px; color: var(--accent); }
+.status { font-size:.75rem; color:var(--u2); }
 
 /* MESSAGES */
 .messages {
-  flex: 1 1 auto;
-  min-height: 0;
-  padding: 16px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+  flex:1;
+  overflow-y:auto;
+  padding:1rem;
+  display:flex;
+  flex-direction:column;
+  gap:.75rem;
 }
 
-/* MESSAGE */
 .msg {
-  max-width: 75%;
-  padding: 12px 14px;
-  border-radius: 16px;
-  font-size: 15px;
-  line-height: 1.5;
-  animation: slideIn 0.25s ease;
+  max-width:75%;
+  padding:.75rem 1rem;
+  border-radius:16px;
+  animation:fade .25s ease;
 }
 
-@keyframes slideIn {
-  from { opacity: 0; transform: translateY(8px) scale(0.98); }
-  to   { opacity: 1; transform: translateY(0) scale(1); }
+.user {
+  align-self:flex-end;
+  background:linear-gradient(135deg,var(--u1),var(--u2));
+  color:#fff;
+  border-bottom-right-radius:4px;
 }
 
-.msg.user {
-  align-self: flex-end;
-  background: var(--accent-grad);
-  color: white;
-  border-bottom-right-radius: 4px;
-}
-
-.msg.nyla {
-  align-self: flex-start;
-  background: var(--bubble);
-  border-bottom-left-radius: 4px;
+.nyla {
+  align-self:flex-start;
+  background:var(--nyla);
+  border-bottom-left-radius:4px;
 }
 
 .emotion {
-  font-size: 11px;
-  margin-top: 4px;
-  opacity: 0.6;
-  color: var(--accent);
+  font-size:.7rem;
+  margin-top:4px;
+  opacity:.7;
+  color:var(--u2);
+}
+
+@keyframes fade {
+  from{opacity:0;transform:translateY(6px)}
+  to{opacity:1;transform:none}
 }
 
 /* TYPING */
 .typing {
-  display: flex;
-  gap: 6px;
-  padding: 10px 14px;
-  background: var(--bubble);
-  border-radius: 16px;
-  width: fit-content;
+  display:flex;gap:6px;
 }
-
 .dot {
-  width: 6px;
-  height: 6px;
-  background: var(--accent);
-  border-radius: 50%;
-  animation: bounce 1.2s infinite ease-in-out;
+  width:8px;height:8px;border-radius:50%;
+  background:var(--u2);
+  animation:bounce 1.4s infinite;
 }
-
-.dot:nth-child(2) { animation-delay: .15s; }
-.dot:nth-child(3) { animation-delay: .3s; }
+.dot:nth-child(2){animation-delay:.2s}
+.dot:nth-child(3){animation-delay:.4s}
 
 @keyframes bounce {
-  0%, 80%, 100% { transform: scale(0.8); opacity: .5; }
-  40% { transform: scale(1.2); opacity: 1; }
+  0%,80%,100%{opacity:.4;transform:none}
+  40%{opacity:1;transform:translateY(-6px)}
 }
 
 /* INPUT */
-.input-area {
-  padding: 14px;
-  background: var(--header);
-  border-top: 1px solid #2a2a3a;
-  display: flex;
-  gap: 10px;
+.input {
+  display:flex;
+  gap:.5rem;
+  padding:1rem;
+  background:var(--header);
+  border-top:1px solid var(--border);
 }
 
-.input-area input {
-  flex: 1;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #e4e4e7;
-  font-size: 15px;
+.input input {
+  flex:1;
+  background:none;
+  border:none;
+  outline:none;
+  color:var(--text);
+  font-size:1rem;
 }
 
-.input-area button {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  background: var(--accent-grad);
-  color: white;
-  font-size: 18px;
+.input button {
+  width:40px;height:40px;border-radius:50%;
+  border:none;
+  background:linear-gradient(135deg,var(--u1),var(--u2));
+  color:#fff;font-size:1.1rem;
 }
-
-.input-area button:disabled { opacity: 0.5; }
-
-/* EMOTION UI */
-.app.happy   { box-shadow: 0 0 25px rgba(232,121,249,.35); }
-.app.blush   { box-shadow: 0 0 30px rgba(167,139,250,.45); }
-.app.angry   { box-shadow: 0 0 30px rgba(239,68,68,.45); }
-.app.excited { box-shadow: 0 0 35px rgba(56,189,248,.45); }
-.app.sleepy  { box-shadow: 0 0 20px rgba(148,163,184,.35); }
+.input button:disabled{opacity:.5}
 </style>
 </head>
 
 <body>
 
-<div class="app" id="app">
+<div class="app">
   <div class="header">
     <div class="avatar">N</div>
     <div>
-      <h1>Nyla</h1>
+      <div>Nyla</div>
       <div class="status" id="status">online</div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
-  <div class="input-area">
-    <input id="input" placeholder="Message Nyla..." autocomplete="off">
+  <div class="input">
+    <input id="input" placeholder="Message Nyla…">
     <button id="send">➤</button>
   </div>
 </div>
 
 <script>
-/* ================= CONFIG ================= */
-const API = "https://nyla-api.onrender.com/nyla";
-const STORAGE_KEY = "nyla_chat_history";
+const API="https://nyla-api.onrender.com/nyla";
+const msgs=document.getElementById("messages");
+const input=document.getElementById("input");
+const send=document.getElementById("send");
+const statusText=document.getElementById("status");
 
-/* ================= ELEMENTS ================= */
-const app = document.getElementById("app");
-const messages = document.getElementById("messages");
-const input = document.getElementById("input");
-const send = document.getElementById("send");
-const statusText = document.getElementById("status");
+let typing;
+let locked=false;
 
-let busy = false;
-let typingBubble = null;
-let chatHistory = [];
+send.onclick=sendMsg;
+input.onkeydown=e=>e.key==="Enter"&&sendMsg();
 
-/* ================= LOAD HISTORY ================= */
-loadHistory();
+function add(text,cls,emo){
+  const m=document.createElement("div");
+  m.className="msg "+cls;
+  m.textContent=text;
+  msgs.appendChild(m);
 
-/* ================= EVENTS ================= */
-send.onclick = sendMessage;
-input.onkeydown = e => e.key === "Enter" && sendMessage();
-
-/* ================= FUNCTIONS ================= */
-function addMessage(text, sender, emotion = "") {
-  const msg = document.createElement("div");
-  msg.className = "msg " + sender;
-  msg.textContent = text;
-
-  if (emotion && sender === "nyla") {
-    const emo = document.createElement("div");
-    emo.className = "emotion";
-    emo.textContent = emotion;
-    msg.appendChild(emo);
-    triggerEmotionUI(emotion);
+  if(emo){
+    const e=document.createElement("div");
+    e.className="emotion";
+    e.textContent=emo;
+    m.appendChild(e);
   }
 
-  messages.appendChild(msg);
-  messages.scrollTop = messages.scrollHeight;
-
-  chatHistory.push({ text, sender, emotion });
-  saveHistory();
+  msgs.scrollTop=msgs.scrollHeight;
 }
 
-function showTyping() {
-  typingBubble = document.createElement("div");
-  typingBubble.className = "typing";
-  typingBubble.innerHTML = `<div class="dot"></div><div class="dot"></div><div class="dot"></div>`;
-  messages.appendChild(typingBubble);
-  messages.scrollTop = messages.scrollHeight;
+function showTyping(){
+  typing=document.createElement("div");
+  typing.className="msg nyla";
+  typing.innerHTML='<div class="typing"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>';
+  msgs.appendChild(typing);
+  msgs.scrollTop=msgs.scrollHeight;
 }
 
-function removeTyping() {
-  if (typingBubble) typingBubble.remove();
-  typingBubble = null;
-}
+function hideTyping(){ typing?.remove(); }
 
-function triggerEmotionUI(emotion) {
-  app.className = "app " + emotion;
-  setTimeout(() => app.className = "app", 1200);
-}
+async function sendMsg(){
+  if(!input.value||locked) return;
 
-/* ================= STORAGE ================= */
-function saveHistory() {
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(chatHistory));
-}
-
-function loadHistory() {
-  const saved = localStorage.getItem(STORAGE_KEY);
-  if (!saved) {
-    addMessage("Heyyy 💜 I’m Nyla. Talk to me~", "nyla", "excited");
-    return;
-  }
-
-  chatHistory = JSON.parse(saved);
-  chatHistory.forEach(m => addMessage(m.text, m.sender, m.emotion));
-}
-
-/* ================= SEND ================= */
-async function sendMessage() {
-  const text = input.value.trim();
-  if (!text || busy) return;
-
-  input.value = "";
-  addMessage(text, "user");
-
-  busy = true;
-  send.disabled = true;
+  const text=input.value;
+  input.value="";
+  add(text,"user");
   showTyping();
 
-  try {
-    const res = await fetch(API, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ message: text })
+  try{
+    const r=await fetch(API,{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body:JSON.stringify({ message:text })
     });
 
-    const data = await res.json();
-    removeTyping();
+    const d=await r.json();
+    hideTyping();
+    add(d.reply,"nyla",d.emotion);
 
-    addMessage(data.reply, "nyla", data.emotion);
+    /* 🔋 COOLDOWN HANDLING */
+    if(d.cooldown){
+      locked=true;
+      statusText.textContent="recharging… 🔋";
+      input.placeholder="Nyla is recharging…";
+      send.disabled=true;
 
-    // 🔋 COOLDOWN MODE
-    if (data.cooldown) {
-      statusText.textContent = "recharging… 🔋";
-      input.placeholder = "Nyla is resting…";
-      send.disabled = true;
-
-      setTimeout(() => {
-        statusText.textContent = "online";
-        input.placeholder = "Message Nyla...";
-        send.disabled = false;
-        busy = false;
-      }, 60_000);
-
-      return;
+      setTimeout(()=>{
+        locked=false;
+        statusText.textContent="online";
+        input.placeholder="Message Nyla…";
+        send.disabled=false;
+      },60000);
     }
 
-  } catch {
-    removeTyping();
-    addMessage("I lagged 😭 try again", "nyla", "shocked");
+  }catch{
+    hideTyping();
+    add("Something broke 😭","nyla","shocked");
   }
-
-  busy = false;
-  send.disabled = false;
 }
 </script>
 
