--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ body {
   background:var(--panel);
   border-left:1px solid var(--border);
   border-right:1px solid var(--border);
+  position:relative;
+  z-index:2;
 }
 
 /* HEADER */
@@ -100,9 +102,7 @@ body {
 }
 
 /* TYPING */
-.typing {
-  display:flex;gap:6px;
-}
+.typing { display:flex; gap:6px; }
 .dot {
   width:8px;height:8px;border-radius:50%;
   background:var(--u2);
@@ -112,7 +112,7 @@ body {
 .dot:nth-child(3){animation-delay:.4s}
 
 @keyframes bounce {
-  0%,80%,100%{opacity:.4;transform:none}
+  0%,80%,100%{opacity:.4}
   40%{opacity:1;transform:translateY(-6px)}
 }
 
@@ -141,6 +141,17 @@ body {
   color:#fff;font-size:1.1rem;
 }
 .input button:disabled{opacity:.5}
+
+/* LIVE2D */
+#nyla-canvas {
+  position:fixed;
+  right:0;
+  bottom:0;
+  width:360px;
+  height:560px;
+  pointer-events:none;
+  z-index:1;
+}
 </style>
 </head>
 
@@ -163,7 +174,14 @@ body {
   </div>
 </div>
 
+<canvas id="nyla-canvas"></canvas>
+
+<!-- LIBS -->
+<script src="https://unpkg.com/pixi.js@7.3.2/dist/pixi.min.js"></script>
+<script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/index.min.js"></script>
+
 <script>
+/* ===== CHAT ===== */
 const API="https://nyla-api.onrender.com/nyla";
 const msgs=document.getElementById("messages");
 const input=document.getElementById("input");
@@ -181,14 +199,12 @@ function add(text,cls,emo){
   m.className="msg "+cls;
   m.textContent=text;
   msgs.appendChild(m);
-
   if(emo){
     const e=document.createElement("div");
     e.className="emotion";
     e.textContent=emo;
     m.appendChild(e);
   }
-
   msgs.scrollTop=msgs.scrollHeight;
 }
 
@@ -204,7 +220,6 @@ function hideTyping(){ typing?.remove(); }
 
 async function sendMsg(){
   if(!input.value||locked) return;
-
   const text=input.value;
   input.value="";
   add(text,"user");
@@ -216,18 +231,15 @@ async function sendMsg(){
       headers:{ "Content-Type":"application/json" },
       body:JSON.stringify({ message:text })
     });
-
     const d=await r.json();
     hideTyping();
     add(d.reply,"nyla",d.emotion);
 
-    /* 🔋 COOLDOWN HANDLING */
     if(d.cooldown){
       locked=true;
       statusText.textContent="recharging… 🔋";
       input.placeholder="Nyla is recharging…";
       send.disabled=true;
-
       setTimeout(()=>{
         locked=false;
         statusText.textContent="online";
@@ -235,12 +247,40 @@ async function sendMsg(){
         send.disabled=false;
       },60000);
     }
-
   }catch{
     hideTyping();
     add("Something broke 😭","nyla","shocked");
   }
 }
+
+/* ===== LIVE2D ===== */
+(async()=>{
+  try{
+    const app=new PIXI.Application({
+      view:document.getElementById("nyla-canvas"),
+      width:360,
+      height:560,
+      backgroundAlpha:0
+    });
+
+    const model=await PIXI.live2d.Live2DModel.from(
+      "./1113_v2/Z.model3.json"
+    );
+
+    model.anchor.set(0.5,1);
+    model.scale.set(0.45);
+    model.x=app.renderer.width/2;
+    model.y=app.renderer.height;
+
+    app.stage.addChild(model);
+
+    if(model.motion) model.motion("Idle");
+
+    console.log("💜 Nyla loaded successfully");
+  }catch(e){
+    console.error("Live2D error:",e);
+  }
+})();
 </script>
 
 </body>
